--- a/web/mods.html
+++ b/web/mods.html
@@ -63,7 +63,7 @@
                     class="inline-block px-4 py-2 bg-blue-500 text-white font-semibold rounded shadow hover:bg-blue-600 transition">Tüm
                     Modları İndir</a>
             </div>
-            <div class="overflow-x-auto rounded-xl shadow mb-4">
+            <div class="overflow-x-auto rounded-lg shadow mb-4 bg-gray-800/60">
                 <ul class="divide-y divide-gray-800" id="modList"></ul>
             </div>
             <div id="loading" class="text-center text-blue-400 font-semibold my-4">Yükleniyor...</div>
@@ -104,8 +104,6 @@
                     const statusEl = document.getElementById('serverStatus');
                     statusEl.textContent = server.online ? 'Çevrimiçi' : 'Kapalı';
                     statusEl.className = server.online ? 'text-green-400 font-bold' : 'text-red-400 font-bold';
-                } else {
-                    document.getElementById('serverInfoBox').style.display = 'none';
                 }
                 allMods = mods;
                 filteredMods = mods;
@@ -145,10 +143,9 @@
                 const li = document.createElement('li');
                 li.className = 'flex flex-col sm:flex-row sm:items-center justify-between gap-2 py-4 px-2';
                 li.innerHTML = `
-      <div class="flex-1 min-w-0">
+      <div class="flex-1 min-w-0 bg-gray-800/60 rounded-lg p-4 shadow">
         <div class="font-semibold text-gray-100 truncate">${mod.text}</div>
-        <div class="text-xs text-gray-400 truncate">${mod.name}</div>
-        <div class="text-xs text-gray-400 truncate">${mod.author || ''}</div>
+        <div class="text-xs text-gray-400 truncate">${mod.author}</div>
       </div>
       <a class="inline-block px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600 text-sm font-medium transition" href="${createDownloadUrl(mod.name)}" target="_blank">İndir</a>
     `;
