--- a/web/gallery.html
+++ b/web/gallery.html
@@ -39,8 +39,23 @@
         <div id="galleryContent" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mb-4"></div>
         <div class="text-center text-gray-400 text-sm mb-8">Topluluk üyelerimizin oyun içi anları burada!<br>Daha fazla
             fotoğraf için Discord'a katıl.</div>
+        <!-- Popup Modal -->
+        <div id="popupModal"
+            class="fixed inset-0 z-[100] flex items-center justify-center bg-black/80 px-2 py-8 md:py-0 hidden">
+            <div
+                class="bg-gray-900 rounded-2xl shadow-2xl flex flex-col md:flex-row max-w-4xl w-full mx-2 relative overflow-hidden">
+                <button id="popupClose"
+                    class="absolute top-3 right-4 text-gray-300 hover:text-white text-3xl font-bold z-10">&times;</button>
+                <img id="popupImg" src="" alt="Büyük Görsel"
+                    class="max-h-[80vh] w-full md:w-[600px] object-contain bg-black rounded-l-2xl">
+                <div class="flex-1 flex flex-col justify-center items-center p-8 min-w-[220px]">
+                    <div id="popupCaption" class="text-gray-100 text-xl md:text-2xl font-semibold text-center mb-2">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer class="text-center text-xs text-gray-500 py-6 mt-8">
+    <footer id="footer" class="text-center text-xs text-gray-500 py-6 mt-8">
         Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu<br>
         İletişim: <b>poncikpanda</b> (Discord)
     </footer>
@@ -58,17 +73,37 @@
                 container.innerHTML = '';
                 for (const item of items) {
                     const div = document.createElement('div');
-                    div.className = 'rounded-xl overflow-hidden shadow bg-gray-900 hover:scale-105 transition-transform flex flex-col';
+                    div.className = 'rounded-xl overflow-hidden shadow bg-gray-900 hover:scale-105 transition-transform flex flex-col cursor-pointer';
                     div.innerHTML = `
-                    <img src="${item.src}" alt="Galeri" class="w-full h-40 object-cover">
-                    <div class="p-3 text-center text-gray-200 text-sm">${item.caption || ''}</div>
-                `;
+                        <img id="resim" src="${item.src}" alt="Galeri" class="w-full h-40 object-cover">
+                        <div class="p-3 text-center text-gray-200 text-sm">${item.caption || ''}</div>
+                    `;
+                    div.addEventListener('click', () => openPopup(item.src, item.caption));
                     container.appendChild(div);
                 }
             } catch {
                 container.innerHTML = '<div class="col-span-full text-center text-red-400">Galeri yüklenemedi.</div>';
             }
         }
+        // Popup fonksiyonları
+        function openPopup(src, caption) {
+            document.getElementById('popupImg').src = src;
+            document.getElementById('popupCaption').textContent = caption || '';
+            document.getElementById('popupModal').classList.remove('hidden');
+            document.getElementById('footer').classList.add('hidden');
+            document.body.style.overflow = 'hidden';
+        }
+        function closePopup() {
+            document.getElementById('popupModal').classList.add('hidden');
+            document.getElementById('popupImg').src = '';
+            document.getElementById('popupCaption').textContent = '';
+            document.getElementById('footer').classList.remove('hidden');
+            document.body.style.overflow = '';
+        }
+        document.getElementById('popupClose').onclick = closePopup;
+        document.getElementById('popupModal').onclick = function (e) {
+            if (e.target === this) closePopup();
+        };
         loadGallery();
     </script>
 </body>
