--- a/web/gallery.html
+++ b/web/gallery.html
@@ -41,15 +41,15 @@
             fotoğraf için Discord'a katıl.</div>
         <!-- Popup Modal -->
         <div id="popupModal"
-            class="fixed inset-0 z-[100] flex items-center justify-center bg-black/80 px-2 py-8 md:py-0 hidden">
+            class="fixed inset-0 z-[100] flex items-center justify-center bg-black/90 px-0 py-0 md:py-0 hidden">
             <div
-                class="bg-gray-900 rounded-2xl shadow-2xl flex flex-col md:flex-row max-w-4xl w-full mx-2 relative overflow-hidden">
+                class="bg-gray-900 rounded-lg shadow-2xl flex flex-col md:flex-row max-w-[96vw] max-h-[96vh] w-full h-full md:h-auto mx-0 relative overflow-hidden">
                 <button id="popupClose"
                     class="absolute top-3 right-4 text-gray-300 hover:text-white text-3xl font-bold z-10">&times;</button>
                 <img id="popupImg" src="" alt="Büyük Görsel"
-                    class="max-h-[80vh] w-full md:w-[600px] object-contain bg-black rounded-l-2xl">
-                <div class="flex-1 flex flex-col justify-center items-center p-8 min-w-[220px]">
-                    <div id="popupCaption" class="text-gray-100 text-xl md:text-2xl font-semibold text-center mb-2">
+                    class="h-[60vh] md:h-[90vh] w-full md:w-auto max-w-[70vw] object-cover bg-black rounded-lg-2xl">
+                <div class="flex-1 flex flex-col justify-center items-center p-4 md:p-8 min-w-[140px] max-w-[400px]">
+                    <div id="popupCaption" class="text-gray-100 text-lg md:text-2xl font-semibold text-center mb-2">
                     </div>
                 </div>
             </div>
